# duckdb_rs

./: .gitignore  1.txt  Cargo.toml  README.md  build.rs  million_students_txn.db.wal  prompt.txt  优化.md
docs/: push_down.md  rebot_process.md
src/: lib.rs
src/catalog/: catalog.rs  catalog_entry.rs  catalog_set.rs  catalog_transaction.rs  column_dependency.rs  default_generator.rs  dependency.rs  dependency_manager.rs  entry.rs  entry_lookup.rs  error.rs  mod.rs  schema_entry.rs  search_path.rs  standard_entry.rs  table_catalog_entry.rs  transaction.rs  types.rs
src/common/: bitpacking.rs  errors.rs  fsst.rs  mod.rs
src/connection/: connection.rs  mod.rs
src/db/: catalog_deserializer.rs  conn.rs  connection.rs  duck_engine.rs  engine.rs  mod.rs
src/execution/: adaptive_filter.rs  mod.rs
src/function/: compression_config.rs  compression_function.rs  mod.rs
src/planner/: mod.rs  table_filter.rs  table_filter_set.rs  table_filter_state.rs
src/storage/: arena_allocator.rs  block.rs  checkpoint_manager.rs  checksum.rs  data_pointer.rs  data_table.rs  local_storage.rs  mod.rs  optimistic_data_writer.rs  serialization.rs  single_file_block_manager.rs  standard_buffer_manager.rs  standard_file_system.rs  storage_info.rs  storage_lock.rs  storage_manager.rs  storage_options.rs  table_io_manager.rs  wal_replay.rs  write_ahead_log.rs
src/transaction/: append_info.rs  cleanup_state.rs  commit_state.rs  delete_info.rs  duck_transaction.rs  duck_transaction_manager.rs  meta_transaction.rs  mod.rs  rollback_state.rs  transaction.rs  transaction_context.rs  types.rs  (+5 more)
(+107 files in other folders)
