[package]
name = "duckdb_rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
parking_lot     = "0.12"
crossbeam-queue = "0.3"
anyhow = "1"

[build-dependencies]
cc = "1"



[[bin]]
name = "test_duckdb_interop"
path = "src/bin/test_duckdb_interop.rs"



[[bin]]
name = "read_million_students"
path = "src/bin/test_read_million_students.rs"
