[package]
name = "duckdb_rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
parking_lot     = "0.12"
crossbeam-queue = "0.3"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }

[build-dependencies]
cc = "1"



[[bin]]
name = "test_duckdb_interop"
path = "src/bin/test_duckdb_interop.rs"



[[bin]]
name = "read_million_students"
path = "src/bin/test_read_million_students.rs"

[[bin]]
name = "test_tokio_parallel_customer_scan"
path = "src/bin/test_tokio_parallel_customer_scan.rs"
